Add header for 360 Degree Therapy in timesheet

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
 
 <!-- TIMESHEET -->
 <div id="timesheetContainer" class="sheet-container" style="display:none;">
+  <div style="text-align:center; font-weight:bold; color:#f57c00; font-size:20px; margin-bottom:6px;">
+  360 Degree Therapy
+</div>
   <div class="logo-row">
     <!-- Put logo.png in the same folder as index.html in your repo -->
     <img src="logo.png" alt="360 Logo">
