Refactor timesheet table structure and rows

--- a/index.html
+++ b/index.html
@@ -102,41 +102,42 @@
   <h1>Bi-Weekly Timesheet – 2026</h1>
 
   <table class="no-border">
-    <tr>
-      <td style="width:18%;"><strong>Period</strong></td>
-      <td style="width:32%;">
-        <select id="weekPeriod"></select>
-      </td>
-      <td style="width:18%;"><strong>Send To Email</strong></td>
-      <td style="width:32%;">
-        <input type="email" id="recipientEmail" placeholder="supervisor@example.com" />
-      </td>
-    </tr>
-    <tr>
-  <td><strong>School District</strong></td>
-  <td><input type="text" id="schoolDistrict" /></td>
-  <td><strong>Supervisor Email</strong></td>
-  <td><input type="email" id="supervisorEmail" /></td>
-</tr>
-<tr>
-  <td><strong>School Name</strong></td>
-  <td><input type="text" id="schoolName" /></td>
-  <td></td>
-  <td></td>
-</tr>
+  <!-- ROW 1 -->
+  <tr>
+    <td style="width:18%;"><strong>Period</strong></td>
+    <td style="width:32%;">
+      <select id="weekPeriod"></select>
+    </td>
+    <td style="width:18%;"><strong>Send To Email</strong></td>
+    <td style="width:32%;">
+      <input type="email" id="recipientEmail" placeholder="supervisor@example.com" />
+    </td>
+  </tr>
 
-    <tr>
-      <td><strong>Employee Name</strong></td>
-      <td><input type="text" id="employeeName" /></td>
-      <td><strong>Title</strong></td>
-      <td><input type="text" id="employeeTitle" /></td>
-    </tr>
-    <tr>
-      <td><strong>Supervisor Name</strong></td>
-      <td><input type="text" id="supervisorName" /></td>
-      <td></td><td></td>
-    </tr>
-  </table>
+  <!-- ROW 2 -->
+  <tr>
+    <td><strong>Employee Name</strong></td>
+    <td><input type="text" id="employeeName" /></td>
+    <td><strong>Title</strong></td>
+    <td><input type="text" id="employeeTitle" /></td>
+  </tr>
+
+  <!-- ROW 3 -->
+  <tr>
+    <td><strong>School District</strong></td>
+    <td><input type="text" id="schoolDistrict" /></td>
+    <td><strong>School Name</strong></td>
+    <td><input type="text" id="schoolName" /></td>
+  </tr>
+
+  <!-- ROW 4 -->
+  <tr>
+    <td><strong>Supervisor Name</strong></td>
+    <td><input type="text" id="supervisorName" /></td>
+    <td><strong>Supervisor Email</strong></td>
+    <td><input type="email" id="supervisorEmail" /></td>
+  </tr>
+</table>
 
   <table>
     <thead>
