Refine no-border class styles in index.html
Updated styles for no-border class to improve padding and vertical alignment.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
     th, td { border: 1px solid #ccc; padding: 6px 8px; font-size: 14px; }
     th { background: #e8e8e8; text-align: left; }
 
-    .no-border td { border: none; padding: 4px; }
+    .no-border td {
+  border: none;
+  padding: 6px 6px;
+  vertical-align: middle;
+}
+
+.no-border strong {
+  font-weight: 600;
+}
+
 
     input, select, textarea {
       width: 100%; box-sizing: border-box;
